--- a/res/xml/grayscale_icon_map.xml
+++ b/res/xml/grayscale_icon_map.xml
@@ -80,6 +80,8 @@
     <icon drawable="@drawable/themed_icon_whatsapp" package="com.gbwhatsapp" />
     <icon drawable="@drawable/themed_icon_whatsapp" package="com.yowhatsapp" />
     <icon drawable="@drawable/themed_icon_telegram" package="org.telegram.messenger" />
+    <icon drawable="@drawable/themed_icon_telegram" package="nekox.messenger" />
+    <icon drawable="@drawable/themed_icon_telegram" package="org.telegram.mdgramyou" />
     <icon drawable="@drawable/themed_icon_instagram" package="com.instagram.android" />
     <icon drawable="@drawable/themed_icon_facebook" package="com.facebook.katana" />
     <icon drawable="@drawable/themed_icon_messenger" package="com.facebook.orca" />
